--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -17,14 +17,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Install Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: 1.25.1
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: '10.18.1'
+          version: "10.18.1"
       - name: Install Node.js
         uses: actions/setup-node@v5
         with:
